# aurim

./: .gitignore  README.md  deep-research-report (1).md
.github/workflows/: harness-regression.yml
apps/backend/: README.md  build.gradle.kts  gradle.properties  pyproject.toml  settings.gradle.kts
apps/backend/app/: main.py
apps/backend/app/api/: __init__.py  routes.py
apps/backend/app/core/: __init__.py
apps/backend/src/main/kotlin/io/atrielle/aurim/backend/: AurimBackendApplication.kt
apps/backend/src/main/kotlin/io/atrielle/aurim/backend/api/: FactoryArtifactController.kt  FactoryRunController.kt  FactorySpecController.kt  GitWorkspaceController.kt  PlatformController.kt  WorkspaceController.kt
apps/backend/src/main/kotlin/io/atrielle/aurim/backend/model/: Contracts.kt
apps/backend/src/main/kotlin/io/atrielle/aurim/backend/persistence/: FactoryArtifactRepository.kt  FactoryRunRepository.kt  FactorySpecRepository.kt  GitWorkspaceRepository.kt  JsonListCodec.kt  WorkspaceRepository.kt
apps/backend/src/main/kotlin/io/atrielle/aurim/backend/service/: FactoryArtifactService.kt  FactoryRunService.kt  FactorySpecService.kt  GitWorkspaceService.kt  WorkspaceService.kt
apps/backend/src/main/resources/: application.yml
apps/backend/src/main/resources/db/migration/: V1__init.sql  V2__first_slice_contracts.sql  V3__align_factory_run_status_contract.sql
apps/frontend/: README.md  index.html  package.json
backend/: README.md
docs/foundation/: cloud-handoff.md  design-system.md  governance-model.md  (+3 more)
frontend/: README.md
harness/: README.md
(+82 files in other folders)
