[project]
name = "syszone-backend"
version = "0.1.0"
description = "Syszone platform backend baseline"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
